Rename to not conflict with package

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,3 +8,5 @@ lib_deps =
     https://github.com/adafruit/Adafruit_BNO08x_RVC
     https://github.com/adafruit/Adafruit_BNO08x
     https://github.com/BYU-Racing/Utils
+    adafruit/Adafruit GPS Library@^1.7.4
+	mikalhart/TinyGPSPlus@^1.0.3
